# rust-aws-dynamo

./: Cargo.toml  README.md
src/: backend.rs  client_real.rs  context.rs  env.rs  errors.rs  id_calculations.rs  lib.rs  macros.rs  parsing.rs  pk_sk.rs  schema.rs  util.rs
src/backend/: mock.rs  real.rs
src/ext/: bundling.rs  crud.rs  display.rs  ingress.rs  macros.rs  maybe_committed.rs
src/ext/bundling/: entities_bundle.rs  entities_policy.rs  export.rs  impl_export.rs  impl_import.rs  impl_mapping.rs  impl_validation.rs  import.rs  mod.rs  model.rs  policy.rs  reference_manifest.rs  spec.rs  tests.rs  utils_bundle_validation.rs  utils_id_mapping.rs  utils_value.rs  value.rs
src/schema/: add_ons.rs  coordinate.rs  display.rs  foreign_ref.rs  id_calculations.rs  identifiers.rs  parsing.rs  pk_sk.rs  timestamp.rs
src/schema/identifiers/: generation.rs  id_path.rs  mod.rs  placement.rs  relations.rs  sort_key.rs  tests.rs
src/util/: backend.rs  batch_optimized_test.rs  calculate_sort.rs  chunk_helpers.rs  collapse_helpers.rs  expand_helpers.rs  extdata.rs  id_helpers.rs  id_relations.rs  metadata_helpers.rs  query.rs  raw_batch_helpers.rs  rename_safety_helpers.rs  test.rs  update_helpers.rs
