[package]
name = "fractic-aws-dynamo"
version = "0.3.1"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = "1.5.1"
aws-sdk-cognitoidentityprovider = "1.35.0"
aws-sdk-dynamodb = "1.34.0"
chrono = "0.4.38"
erased-serde = "0.4.5"
fractic-context = { git = "https://github.com/fractic-io/rust-context.git" }
fractic-core = { git = "https://github.com/fractic-io/rust-core.git" }
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
ordered-float = "4.2.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
mockall = "0.12.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
