[package]
name = "fractic-aws-dynamo"
version = "0.4.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
async-trait = "^0.1.80"
aws-config = "^1.5.1"
aws-sdk-cognitoidentityprovider = "^1.35.0"
aws-sdk-dynamodb = "^1.34.0"
chrono = "^0.4.38"
erased-serde = "^0.4.5"
fractic-context = { git = "https://github.com/fractic-io/rust-context.git" }
fractic-core = { git = "https://github.com/fractic-io/rust-core.git" }
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
futures-util = "^0.3.30"
mockall = "^0.15.0"
ordered-float = "^5.3.0"
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "^1.0.117"
tokio = { version = "^1", features = ["full"] }
uuid = { version = "^1.9.0", features = ["v4", "v7"] }

[dev-dependencies]
approx = "^0.5.1"
